Fix menu excess overflow due to game list display
Closes #358

--- a/style.css
+++ b/style.css
@@ -231,6 +231,10 @@ header h1 {
 	transition-delay: .2s;
 }
 
+#gameFilterSettings.collapsed .optionName {
+	display: none;
+}
+
 .gameChildren {
 	width: 90%;
 	margin-left: 9%;
